--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     TOTAL_MEMORY: 268435456,
     errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
     compatibilitycheck: null,
-    dataUrl: "Release/build.data",
-    codeUrl: "Release/build.js",
-    memUrl: "Release/build.mem",
+    dataUrl: "Release/PlanetGen.data",
+    codeUrl: "Release/PlanetGen.js",
+    memUrl: "Release/PlanetGen.mem",
     
   };
 </script>
